[tool.poetry]
name = "collect_whalealerts"
version = "0.1.0"
description = ""
authors = ["Samuel Ay-Bryson <samuel@ay-bryson.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.26"
pandas = "^1.3.4"
psycopg2 = "^2.9.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
